--- a/Web.Statu/Views/Home/Reports/28_Ministerstva.cshtml
+++ b/Web.Statu/Views/Home/Reports/28_Ministerstva.cshtml
@@ -368,11 +368,12 @@
             <ol>
                 @foreach (var vl in vladnuti
                     .GroupBy(k=>k.Strana,v=>v,(k,v)=> new { strana=k, days = v.Sum(ss=>ss.Days) } )
+                    .OrderByDescending(m=>m.days)
                     
                     )
                 {
                 <li>
-                    <b>@vl.strana</b> řídila resort celkem <b>@HlidacStatu.Util.RenderData.NiceNumber(vl.days) dní</b>
+                    <b>@vl.strana</b> v čele resortu celkem <b>@HlidacStatu.Util.RenderData.NiceNumber(vl.days) dní</b>
                 </li>
                 }
             </ol>
@@ -381,7 +382,7 @@
         <div class="col-xs-6">
             <h4>Nejdelší nepřetržité působení stran na @resort</h4>
             <ol>
-                @foreach (var vl in vladnuti)
+                @foreach (var vl in vladnuti.OrderByDescending(m=>m.Days))
                 {
                 <li>
                     <b>@vl.Strana</b> (@vl.Zacatek.ToString("d.M.yyyy") - @vl.Konec.ToString("d.M.yyyy"))
@@ -391,14 +392,15 @@
             </ol>
         </div>
         <div class="col-xs-5" style="border-left: 1px #ddd solid;">
-            <h4>Jednotlivý ministři</h4>
+            <h4>Jednotliví ministři</h4>
             <ol>
                 @foreach (var vl in ministri.Where(m => (m.Resort == resort)).OrderBy(m => m.Zacatek))
                 {
                     var celkemD = vladnuti.Where(v => v.Strana == vl.Strana).Sum(m => m.Days);
-    <li>
-        @vl.Jmeno <b>@vl.Strana</b>, (@vl.Zacatek.ToString("d.M.yyyy") - @vl.Konec.ToString("d.M.yyyy"))
-    </li>}
+                    <li>
+                        @vl.Jmeno <b>@vl.Strana</b>, (@vl.Zacatek.ToString("d.M.yyyy") - @vl.Konec.ToString("d.M.yyyy"))
+                    </li>
+                }
             </ol>
         </div>
     </div>
@@ -406,5 +408,6 @@
 </div>
 
 <h4><a href="/report/28">Stejná statistika pro ostatní ministerstva</a></h4>
+
 
 
