--- a/Web.Statu/Views/Kindex/Porovnat.Index.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.Index.cshtml
@@ -55,7 +55,7 @@
                     <div>
                         @foreach (var item in Devmasters.Enums.EnumTools.InGroup(typeof(HlidacStatu.Lib.Data.Firma.Zatrideni.StatniOrganizaceObor), g))
                         {
-                        <a href="/kindex/zebricek/@item.ToString()" class="btn btn-default">Porovnat @(item.ToNiceDisplayName())</a>
+                        <a href="/kindex/porovnat/@item.ToString()" class="btn btn-default">Porovnat @(item.ToNiceDisplayName())</a>
 
                         }
                     </div>
