--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -74,53 +74,10 @@
 
 </div>
 
-@{
-
-    var groups = Model.GroupBy(s => s.Group,
-        (key, group) => new {
-            GroupName = key,
-            Subjects = group.Select(s =>
-                Html.KIndexIcon(s.AnnualData.KIndexLabel, 15, showNone: true).ToHtmlString()
-                            + $"<a href=\"#\" onclick=\"AddCompany({s.Ico},{selectedYear}); return false;\" \">{s.Jmeno}</a>"
-            )
-        });
-
-    if (groups.Count() <= 1)
-    {
-        groups = Model.GroupBy(s => s.Kraj,
-        (key, group) => new
-        {
-            GroupName = key,
-            Subjects = group.Select(s =>
-                Html.KIndexIcon(s.AnnualData.KIndexLabel, 15, showNone: true).ToHtmlString()
-                            + $"<a href=\"#\" onclick=\"AddCompany({s.Ico},{selectedYear}); return false;\" \">{s.Jmeno}</a>"
-            )
-        });
-    }
-
-}
-
-@if (groups.Count() > 1)
-{
-    <div id="#groups">
-        @foreach (var group in groups)
-        {
-            <div id="@group.GroupName">
-                <p>@group.GroupName</p>
-
-                @Html.Raw(string.Join(", ", group.Subjects))
-
-            </div>
-        }
-    </div>
-}
-
-
 <input placeholder="Přidat úřad/firmu" type="text" name="addComparison" id="addComparison" class="form-control companyahead input-lg" oninput="FindCompany(this)" />
 <div id="companies">
 
 </div>
-
 
 <div class="row">
     <div class="col-sm-12">
@@ -129,27 +86,21 @@
             <tbody>
                 <tr id="nazev">
                     <td style="width:290px">firma</td>
-                    @if (groups.Count() <= 1)
+                    @foreach (var cmp in Model)
                     {
-                        foreach (var cmp in Model)
-                        {
-                            <th class="porovnaniHead number @cmp.Ico">
-                                <a href="#" onclick="RemoveCompany('@cmp.Ico'); return false;" style="color: red; float:left"><i class="far fa-trash-alt"></i></a> <a href="/kindex/detail/@cmp.Ico">@(Devmasters.Core.TextUtil.ShortenText(@cmp.Jmeno, 55))</a>
-                            </th>
-                        }
+                        <th class="porovnaniHead number @cmp.Ico">
+                            <a href="#" onclick="RemoveCompany('@cmp.Ico'); return false;" style="color: red; float:left"><i class="far fa-trash-alt"></i></a> <a href="/kindex/detail/@cmp.Ico">@(Devmasters.Core.TextUtil.ShortenText(@cmp.Jmeno, 55))</a>
+                        </th>
                     }
 
                 </tr>
                 <tr id="kindex">
                     <th>Celková známka</th>
-                    @if (groups.Count() <= 1)
-                    { 
-                        foreach (var cmp in Model)
-                        {
-                            <td class="porovnani number @cmp.Ico">
-                                @Html.KIndexIcon(cmp.AnnualData.KIndexLabel, "width: 30px", true)
-                            </td>
-                        }
+                    @foreach (var cmp in Model)
+                    {
+                        <td class="porovnani number @cmp.Ico">
+                            @Html.KIndexIcon(cmp.AnnualData.KIndexLabel, "width: 30px", true)
+                        </td>
                     }
                 </tr>
 
@@ -167,26 +118,25 @@
                                 </div>
                             </div>
                         </th>
-                        @if (groups.Count() <= 1)
+                        
+                        @foreach (var cmp in Model)
                         {
-                            foreach (var cmp in Model)
-                            {
-                                var hodnota = cmp.AnnualData?
-                                    .KIndexVypocet?.Radky?
-                                    .Where(r => r.Velicina == (int)velicina)
-                                    .Select(r => r.Hodnota)
-                                    .FirstOrDefault();
+                            var hodnota = cmp.AnnualData?
+                                .KIndexVypocet?.Radky?
+                                .Where(r => r.Velicina == (int)velicina)
+                                .Select(r => r.Hodnota)
+                                .FirstOrDefault();
 
-                                <td class="porovnani number @cmp.Ico">
-                                    @*@(hodnota?.ToString("F2") ?? "Chybí K–Index")*@
+                            <td class="porovnani number @cmp.Ico">
+                                @*@(hodnota?.ToString("F2") ?? "Chybí K–Index")*@
 
-                                    @Html.KIndexIcon(KIndexData.KIndexLabelForPart(velicina, hodnota ?? 0),
-                                        "height:25px",
-                                        showNone: true,
-                                        title: KIndexData.KIndexCommentForPart(velicina, cmp.AnnualData))
-                                </td>
-                            }
+                                @Html.KIndexIcon(KIndexData.KIndexLabelForPart(velicina, hodnota ?? 0),
+                                    "height:25px",
+                                    showNone: true,
+                                    title: KIndexData.KIndexCommentForPart(velicina, cmp.AnnualData))
+                            </td>
                         }
+                        
                     </tr>
                 }
             </tbody>
